--- a/Web.Statu/Views/Subjekt/Odberatele.cshtml
+++ b/Web.Statu/Views/Subjekt/Odberatele.cshtml
@@ -12,6 +12,15 @@
 @{ 
     Layout = null;
     //ViewBag.Title = "Odběratelé " + Model.Jmeno ;
+
+    string dataTableOptions = @"{
+                 'language': {
+                    'url': '//cdn.datatables.net/plug-ins/1.10.19/i18n/Czech.json'
+                },
+                'order': [],
+                'lengthChange': false,
+                'info': false,
+                }";
 }
 
 
@@ -20,30 +29,30 @@
 
         @{
 
-    string ico = Model.ICO;
-    int size = 300;
+            string ico = Model.ICO;
+            int size = 300;
 
-    AggregationContainerDescriptor<HlidacStatu.Lib.Data.Smlouva> aggs = new AggregationContainerDescriptor<HlidacStatu.Lib.Data.Smlouva>()
-        .Terms("perIco", m => m
-            .Field("prijemce.ico")
-            .Size(size)
-        ).Terms("perPrice", m => m
-            .Order(o => o.Descending("sumincome"))
-            .Field("prijemce.ico")
-            .Size(size)
-            .Aggregations(agg => agg
-               .Sum("sumincome", s => s
-                   .Field(ff => ff.CalculatedPriceWithVATinCZK)
-               )
-            )
-        );
+            AggregationContainerDescriptor<HlidacStatu.Lib.Data.Smlouva> aggs = new AggregationContainerDescriptor<HlidacStatu.Lib.Data.Smlouva>()
+                .Terms("perIco", m => m
+                    .Field("prijemce.ico")
+                    .Size(size)
+                ).Terms("perPrice", m => m
+                    .Order(o => o.Descending("sumincome"))
+                    .Field("prijemce.ico")
+                    .Size(size)
+                    .Aggregations(agg => agg
+                       .Sum("sumincome", s => s
+                           .Field(ff => ff.CalculatedPriceWithVATinCZK)
+                       )
+                    )
+                );
 
-    var res = HlidacStatu.Lib.Data.Smlouva.Search.SimpleSearch("icoPlatce:" + ico, 1, 0,
-        HlidacStatu.Lib.Data.Smlouva.Search.OrderResult.FastestForScroll,
-        anyAggregation: aggs, platnyZaznam: true);
+            var res = HlidacStatu.Lib.Data.Smlouva.Search.SimpleSearch("icoPlatce:" + ico, 1, 0,
+                HlidacStatu.Lib.Data.Smlouva.Search.OrderResult.FastestForScroll,
+                anyAggregation: aggs, platnyZaznam: true);
 
-    ReportDataSource rdsPerIco = new ReportDataSource(new ReportDataSource.Column[]
-   {
+            ReportDataSource rdsPerIco = new ReportDataSource(new ReportDataSource.Column[]
+           {
         new  ReportDataSource.Column() { Name="IČO",
             HtmlRender = (s) => {
                                     System.Tuple<string,string> data = (System.Tuple<string,string>)s;
@@ -55,11 +64,11 @@
             ValueRender = (s) => { return ((System.Tuple<string,string>)s).Item1.ToString(); }
         },
         new  ReportDataSource.Column() { Name="Počet smluv",CssClass ="number"},
-    }
-        );
+            }
+                );
 
-    ReportDataSource rdsPerPrice = new ReportDataSource(new ReportDataSource.Column[]
-   {
+            ReportDataSource rdsPerPrice = new ReportDataSource(new ReportDataSource.Column[]
+           {
         new  ReportDataSource.Column() { Name="IČO",
             HtmlRender = (s) => {
                                     System.Tuple<string,string> data = (System.Tuple<string,string>)s;
@@ -69,51 +78,57 @@
                                 },
             TextRender = (s) => { return ((System.Tuple<string,string>)s).Item1.ToString(); }
         },
-        new  ReportDataSource.Column() { Name="Součet cen", 
+        new  ReportDataSource.Column() { Name="Součet cen",
             HtmlRender = (s) => { return HlidacStatu.Lib.Data.Smlouva.NicePrice((double?)s, html:true, shortFormat:true); },
-            OrderValueRender = (s) => { return HlidacStatu.Util.RenderData.OrderValueFormat( ((double?)s) ?? 0 ); }    
+            OrderValueRender = (s) => { return HlidacStatu.Util.RenderData.OrderValueFormat( ((double?)s) ?? 0 ); }
             ,CssClass ="number" },
-       }
-   );
+               }
+           );
 
-    foreach (Nest.KeyedBucket<object> val in ((BucketAggregate)res.ElasticResults.Aggregations["perIco"]).Items)
-    {
-        rdsPerIco.AddRow(
-            new Tuple<string, string>(HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco((string)val.Key, true), (string)val.Key),
-            val.DocCount.ToString()
+            foreach (Nest.KeyedBucket<object> val in ((BucketAggregate)res.ElasticResults.Aggregations["perIco"]).Items)
+            {
+                rdsPerIco.AddRow(
+                    new Tuple<string, string>(HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco((string)val.Key, true), (string)val.Key),
+                    val.DocCount.ToString()
+                    );
+            }
+            foreach (Nest.KeyedBucket<object> val in ((BucketAggregate)res.ElasticResults.Aggregations["perPrice"]).Items)
+            {
+                rdsPerPrice.AddRow(
+                        new Tuple<string, string>(HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco((string)val.Key, true), (string)val.Key),
+                        val.Sum("sumincome").Value
+                    );
+            }
+
+            //chart
+            var ichart = UtilChart.SimpleBarChart(
+                false, false,
+                400,
+                "perIco_o",
+                 "Firmy", "Počet smluv",
+                rdsPerIco.Filter(10)
             );
-    }
-    foreach (Nest.KeyedBucket<object> val in ((BucketAggregate)res.ElasticResults.Aggregations["perPrice"]).Items)
-    {
-        rdsPerPrice.AddRow(
-                new Tuple<string, string>(HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco((string)val.Key, true), (string)val.Key),
-                val.Sum("sumincome").Value
-            );
-    }
 
-    //chart
+            var model = new HlidacStatu.Lib.Render.ReportModel();
+            model.Add("perIcoChart", "Nejúspěšnější dodavatelé podle počtu smluv",
+                UtilChart.SimpleBarChart(
+                    false, false,
+                    400,
+                    "perIco_o",
+                     "Firmy", "Počet smluv",
+                    rdsPerIco.Filter(10))
+                );
+            model.Add("perIcoTable_o", "",rdsPerIco);
 
-
-    var model = new HlidacStatu.Lib.Render.ReportModel();
-    model.Add("perIcoChart", "Nejúspěšnější dodavatelé podle počtu smluv",
-        UtilChart.SimpleBarChart(
-            false, false,
-            400,
-            "perIco_o",
-             "Firmy", "Počet smluv",
-            rdsPerIco.Filter(10))
-        );
-    model.Add("perIcoTable_o", "",rdsPerIco);
-
-    model.Add("perPriceChart", "Nejúspěšnější dodavatelé podle celkové hodnoty smluv",
-        UtilChart.SimpleBarChart(
-            false, false,
-            400,
-            "perPrice_o",
-            "Firmy", "Kč",
-            rdsPerPrice.Filter(10), "Kč")
-        );
-    model.Add("perPriceTable_o","", rdsPerPrice);
+            model.Add("perPriceChart", "Nejúspěšnější dodavatelé podle celkové hodnoty smluv",
+                UtilChart.SimpleBarChart(
+                    false, false,
+                    400,
+                    "perPrice_o",
+                    "Firmy", "Kč",
+                    rdsPerPrice.Filter(10), "Kč")
+                );
+            model.Add("perPriceTable_o","", rdsPerPrice);
 
 }
 
@@ -126,7 +141,23 @@
 
     <div class="row">
         <div class="col-xs-12">
-            @foreach (var q in model.GetQueue().Take(2))
+
+            @(ichart)
+
+            @Html.Toggleable(
+                UtilChart.SimpleBarChart(
+                    false, false,
+                    400,
+                    "perIco_o",
+                     "Firmy", "Počet smluv",
+                    rdsPerIco.Filter(10)
+                ),
+            "Graf",
+            Html.DataToHTMLTable(rdsPerIco, dataTableOptions: dataTableOptions),
+            "Tabulka"
+            )
+
+            @*@foreach (var q in model.GetQueue().Take(2))
             {
                 @UtilChart.RenderReport(q, @"{
                  'language': {
@@ -136,7 +167,7 @@
                 'lengthChange': false,
                 'info': false,
                 }", q.Key)
-            }
+            }*@
 
 
         </div>
